--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,7 +16,7 @@
   width: 592px;
   height: 592px;
 
-  img {
+  .static-image {
     position: absolute;
     height: 447px;
     width: 828px !important;
@@ -39,7 +39,7 @@
     width: 300px;
     height: 300px;
     right: -100px;
-    img {
+    .static-image {
       width: 414px !important;
       height: 223.5px;
       left: 38px;
