--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -116,3 +116,32 @@
 .talk-to-us-section {
   background: var(--primary-600);
 }
+
+footer {
+  .footer-logo {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    .line {
+      width: 100%;
+      height: 1px;
+      background: #ffffff;
+      position: absolute;
+      top: 50%;
+      opacity: 0.2;
+    }
+    img {
+      height: 42px;
+      width: auto;
+      z-index: 99;
+      background: rgb(0 0 0 / var(--tw-bg-opacity));
+      padding: 0 24px;
+    }
+  }
+  .all-rigths {
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    bottom: 32px;
+  }
+}
