--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,6 +4,10 @@
   --neutral-50: #f9fafb;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .container-border-bottom {
   border-bottom: 1px solid #efefef;
 }
@@ -58,6 +62,21 @@
 }
 
 .approach-section {
+  position: relative;
+  .approach-background {
+    width: 200%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: -50%;
+    background: linear-gradient(
+      to bottom right,
+      var(--primary-300) 20%,
+      var(--primary-600)
+    );
+    transform: rotate(-5deg);
+  }
+
   .image-circle {
     width: 80px;
     height: 80px;
