--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,6 +12,11 @@ body {
   border-bottom: 1px solid #efefef;
 }
 
+.icon {
+  color: var(--primary-600);
+  height: 32px;
+}
+
 .circle-background {
   background: var(--primary-300);
   border-radius: 100%;
@@ -77,7 +82,7 @@ body {
     background: linear-gradient(
       to bottom right,
       var(--primary-300) 20%,
-      var(--primary-600)
+      var(--primary-600) 80%
     );
     transform: rotate(-5deg);
   }
@@ -85,7 +90,7 @@ body {
   .image-circle {
     width: 80px;
     height: 80px;
-    padding: 28px;
+    display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 100px;
