--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,22 @@
+@font-face {
+  font-family:'nexa';
+  src:url(https://cdn.wia.io/fonts/nexaregular-webfont.eot);
+  src:url(https://cdn.wia.io/fonts/nexaregular-webfont.eot?#iefix) format('embedded-opentype'),url(https://cdn.wia.io/fonts/nexaregular-webfont.woff2) format('woff2'),url(https://cdn.wia.io/fonts/nexaregular-webfont.woff) format('woff'),url(https://cdn.wia.io/fonts/nexaregular-webfont.ttf) format('truetype'),url(https://cdn.wia.io/fonts/nexaregular-webfont.svg#nexa_regular) format('svg');
+  font-weight:normal;
+}
+@font-face {
+  font-family:'nexa';
+  src:url(https://cdn.wia.io/fonts/nexabold-webfont.eot);
+  src:url(https://cdn.wia.io/fonts/nexabold-webfont.eot?#iefix) format('embedded-opentype'),url(https://cdn.wia.io/fonts/nexabold-webfont.woff2) format('woff2'),url(https://cdn.wia.io/fonts/nexabold-webfont.woff) format('woff'),url(https://cdn.wia.io/fonts/nexabold-webfont.ttf) format('truetype'),url(https://cdn.wia.io/fonts/nexabold-webfont.svg#nexa_boldregular) format('svg');
+  font-weight:bold;
+}
+@font-face {
+  font-family:'nexa';
+  src:url(https://cdn.wia.io/fonts/nexabook-webfont.eot);
+  src:url(https://cdn.wia.io/fonts/nexabook-webfont.eot?#iefix) format('embedded-opentype'),url(https://cdn.wia.io/fonts/nexabook-webfont.woff2) format('woff2'),url(https://cdn.wia.io/fonts/nexabook-webfont.woff) format('woff'),url(https://cdn.wia.io/fonts/nexabook-webfont.ttf) format('truetype'),url(https://cdn.wia.io/fonts/nexabook-webfont.svg#nexa_bookregular) format('svg');
+  font-weight:100;
+}
+
 :root {
   --primary-600: #7c3aed;
   --primary-300: #c4b5fd !important;
@@ -6,6 +25,7 @@
 
 body {
   overflow-x: hidden;
+  font-family: 'nexa' !important;
 }
 
 .svg-inline--fa {
