--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -67,6 +67,9 @@ body {
   color: var(--primary-600);
   height: 32px;
 }
+.icon.xs {
+  height: 24px;
+}
 
 .circle-background {
   background: var(--primary-300);
