--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -226,11 +226,25 @@ footer {
       padding: 0 24px;
     }
   }
- 
+
   .all-rigths {
     position: absolute;
     width: 100%;
     text-align: center;
     bottom: 32px;
   }
+}
+
+.section--terms p {
+  padding-bottom: 20px;
+}
+
+.section--terms h5 {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.section--terms {
+  height: 100%;
+  text-align: left;
 }
