--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -277,4 +277,23 @@ footer {
     font-weight: bold;
     padding-top: 24px;
   }
+
+  h4,
+  h5,
+  h6 {
+    margin-top: 24px !important;
+  }
+
+  ul li {
+    list-style: disc;
+    line-height: 19px;
+    font-size: 13px;
+    margin-left: 30px;
+    margin-top: 2px;
+  }
+  .box_10 {
+    padding: 10px;
+    border-radius: 3px;
+    margin-bottom: 15px;
+  }
 }
